syntax = "proto3";

package inventory;

service InventoryService {
  rpc AddItem (AddItemRequest) returns (AddItemResponse);

  rpc GetItem (GetItemRequest) returns (GetItemResponse);
}

message AddItemRequest {
  string name = 1;
  int32 quantity = 2;
  double price = 3;
}

message AddItemResponse {
  string itemId = 1;
}

message GetItemRequest {
  string itemId = 1;
}


message GetItemResponse {
  string itemId = 1;
  string name = 2;
  int32 quantity = 3;
  double price = 4;
}
